@@ -344,18 +344,6 @@ globus_i_dsi_rest_read_data(
     size_t                              nitems,
     void                               *callback_arg);
 
-enum
-{
-    GLOBUS_DSI_REST_ERROR_PARAMETER = 1,
-    GLOBUS_DSI_REST_ERROR_MEMORY,
-    GLOBUS_DSI_REST_ERROR_PARSE,
-    GLOBUS_DSI_REST_ERROR_CURL,
-    GLOBUS_DSI_REST_ERROR_JSON,
-    GLOBUS_DSI_REST_ERROR_TIME_OUT,
-    GLOBUS_DSI_REST_ERROR_THREAD_FAIL,
-    GLOBUS_DSI_REST_ERROR_UNEXPECTED_DATA,
-};
-
 #define GlobusDsiRestErrorParameter() \
     globus_error_put(GlobusDsiRestErrorParameterObject())
 #define GlobusDsiRestErrorMemory() \
